--- a/viewnior.conf
+++ b/viewnior.conf
@@ -2,13 +2,15 @@
 zoom-mode=0
 fit-on-fullscreen=true
 show-hidden=false
+dark-background=false
 smooth-images=true
 confirm-delete=true
 reload-on-save=false
 show-menu-bar=false
 show-toolbar=true
 show-scrollbar=true
-start-maximized=false
+show-statusbar=false
+start-maximized=true
 slideshow-timeout=5
 auto-resize=false
 behavior-wheel=2
