--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,5 +1,5 @@
 "" Source your .vimrc
-"source ~/.vimrc
+source ~/.vimrc
 
 "" -- Suggested options --
 " Show a few lines of context around the cursor. Note that this makes the
